Fix spacing on home page

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -7,7 +7,7 @@ html {
 body {
 	> header {
 		margin-top: 8px;
-		padding: 2em 0;
+		padding: 2em 30px 0 30px;
 		background-color: $page-bgcolor;
 		text-align: center;
 
@@ -26,7 +26,8 @@ body {
 }
 
 .related-resources {
-	margin-top: 2em;
+	margin-top: 1em;
+	margin-bottom: 0;
 
 	li {
 		margin: 0 0.5em;
@@ -35,7 +36,7 @@ body {
 }
 
 main {
-	padding: 2em 0;
+	padding: 3em 0 2em 0;
 	background-color: $page-bgcolor;
 }
 
@@ -49,7 +50,6 @@ main {
 	@media (max-width: 760px) {
 		width: page-width(flow);
 		margin: 0 30px;
-		padding: 2em 0;
 	}
 }
 
